<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/nav_graph_item"
    app:startDestination="@id/itemListFragment">

    <fragment
        android:id="@+id/itemListFragment"
        android:name="com.murray.item.ui.itemlist.ItemListFragment"
        android:label="@string/fragment_item_list_label"
        tools:layout="@layout/fragment_item_list" >
        <action
            android:id="@+id/action_itemListFragment_to_itemCreationFragment"
            app:destination="@id/itemCreationFragment" />
        <action
            android:id="@+id/action_itemListFragment_to_itemDetailFragment"
            app:destination="@id/itemDetailFragment" >
            <argument
                android:name="item"
                app:argType="com.murray.data.items.Item"
                />
        </action>
        <action
            android:id="@+id/action_itemListFragment_to_fragmentProgressDialog"
            app:destination="@id/fragmentProgressDialog" />
    </fragment>
    <fragment
        android:id="@+id/itemCreationFragment"
        android:name="com.murray.item.ui.itemcreation.ItemCreationFragment"
        android:label="@string/fragment_item_creation_label"
        tools:layout="@layout/fragment_item_creation" >
        <argument
            android:name="item"
            app:argType="com.murray.data.items.Item" />
    </fragment>
    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.murray.item.ui.ItemDetailFragment"
        android:label="@string/fragment_item_detail_label"
        tools:layout="@layout/fragment_item_detail" >
        <action
            android:id="@+id/action_itemDetailFragment_to_itemCreationFragment"
            app:destination="@id/itemCreationFragment" />
        <argument
            android:name="item"
            app:argType="com.murray.data.items.Item" />
    </fragment>

    <dialog
        android:id="@+id/baseFragmentDialog"
        android:name="com.murray.invoice.base.BaseFragmentDialog"
        android:label="BaseFragmentDialog" >
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="message"
            app:argType="string" />
    </dialog>
    <dialog
        android:id="@+id/fragmentProgressDialog"
        android:name="com.murray.invoice.base.FragmentProgressDialog"
        android:label="FragmentProgressDialog" />
</navigation>