<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--
        <variable
            name="item"
            type="com.murray.entities.items.Item" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.murray.item.ui.ItemDetailFragment">

        <!-- Info -->

        <androidx.cardview.widget.CardView
            android:id="@+id/cvItemDetailInfo"
            android:layout_width="@dimen/card_width_small"
            android:layout_height="@dimen/card_height_small"
            android:layout_marginTop="@dimen/margin_top_large"
            app:cardBackgroundColor="@color/md_theme_light_secondaryContainer"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/elevation_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- item values -->
                <TextView
                    android:id="@+id/tvItemDetailName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_small"
                    android:text="@string/placeholder_item_name"
                    android:textSize="@dimen/tv_card_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailStartCardInfo"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemDetailNameTitle"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tvItemDetailRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_small"
                    android:text="@string/placeholder_item_rate"
                    android:textSize="@dimen/tv_card_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailStartCardInfo"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemDetailRateTitle"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tvItemDetailTaxable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_small"
                    android:text="@string/placeholder_item_taxable"
                    android:textSize="@dimen/tv_card_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailMiddleCardInfo"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemDetailTaxableTitle"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tvItemDetailType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_small"
                    android:text="@string/placeholder_item_type"
                    android:textSize="@dimen/tv_card_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailMiddleCardInfo"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemDetailTypeTitle"
                    app:layout_constraintVertical_bias="0.0" />

                <!-- helpers -->
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gItemDetailStartCardInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gItemDetailMiddleCardInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <!-- decoration lines-->
                <View
                    android:layout_width="@dimen/decoration_lines_width"
                    android:layout_height="@dimen/decoration_lines_height"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailStartCardInfo"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemDetailNameTitle" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="@dimen/decoration_lines_width"
                    android:layout_height="@dimen/decoration_lines_height"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailMiddleCardInfo"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemDetailTypeTitle" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="@dimen/decoration_lines_width"
                    android:layout_height="@dimen/decoration_lines_height"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailMiddleCardInfo"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemDetailTaxableTitle" />

                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/decoration_lines_width"
                    android:layout_height="@dimen/decoration_lines_height"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailStartCardInfo"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemDetailRateTitle" />

                <!-- titles -->
                <TextView
                    android:id="@+id/tvItemDetailNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_medium"
                    android:text="@string/item_name_title"
                    android:textSize="@dimen/tv_card_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailStartCardInfo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tvItemDetailTypeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_medium"
                    android:text="@string/item_type_title"
                    android:textSize="@dimen/tv_card_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailMiddleCardInfo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tvItemDetailRateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_rate_title"
                    android:textSize="@dimen/tv_card_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailStartCardInfo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />

                <TextView
                    android:id="@+id/tvItemDetailTaxableTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_taxable_title"
                    android:textSize="@dimen/tv_card_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailMiddleCardInfo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvItemDetailDescr"
            android:layout_width="@dimen/card_width_small"
            android:layout_height="@dimen/card_height_large"
            android:layout_marginTop="@dimen/margin_top_medium"
            app:cardBackgroundColor="@color/md_theme_light_secondaryContainer"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/elevation_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvItemDetailInfo"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvItemDetailDescr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_small"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:justificationMode="inter_word"
                    android:text="@string/placeholder_item_descr"
                    android:textSize="@dimen/tv_card_descr_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailStartCardDescr"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemDetailDescrTitle"
                    app:layout_constraintVertical_bias="0.0" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="@dimen/decoration_lines_width"
                    android:layout_height="@dimen/decoration_lines_height"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailStartCardDescr"
                    app:layout_constraintTop_toBottomOf="@+id/tvItemDetailDescrTitle" />

                <TextView
                    android:id="@+id/tvItemDetailDescrTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_medium"
                    android:text="@string/item_descr_title"
                    android:textSize="@dimen/tv_card_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/gItemDetailStartCardDescr"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gItemDetailStartCardDescr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/ivItemDetail"
            android:layout_width="@dimen/detail_img_size"
            android:layout_height="@dimen/detail_img_size"
            android:background="@drawable/shape_item_img"
            android:clipToOutline="true"
            android:elevation="@dimen/elevation"
            android:src="@drawable/img_maleta_cuero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cvItemDetailDescr"
            app:layout_constraintVertical_bias="0.6" />

        <Button
            android:id="@+id/bItemDetailEditItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_button"
            android:text="@string/b_item_detail_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>